<resources>
    <string name="app_name">SIGMA IPB</string>
    <string name="action_settings">Settings</string>

    <string name="appGeo">APLIKASI FRONT END</string>
    <string name="btnTambah">Tambah Aset</string>
    <string name="btnPencarian">Pencarian Aset</string>

    <string name="title_activity_tambah">Tambah</string>
    <string name="kb_hint">Kode Barang</string>
    <string name="nb_hint">Nama Barang</string>
    <string name="mb_hint">Merek Barang</string>
    <string name="tb_hint">Tahun Barang</string>
    <string name="hsb_hint">Harga Satuan Barang</string>
    <string name="sd_hint">Sumber Dana</string>
    <string name="ruang">Ruangan</string>
    <string name="judul_spinner">Pilih Ruangan</string>
    <string name="pencarian_hint">Kata kunci</string>
    <string-array name="ruang_array">
        <item>Mercury</item>
    </string-array>
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="btnAmbilGambar">Ambil Foto</string>
    <string name="preview">Preview</string>
    <string name="btnSimpan">Simpan</string>
    <string name="btnCari">Cari</string>
    <string name="title_activity_pencarian">Pencarian</string>
    <string name="title_activity_hasil_pencarian">Hasil Pencarian</string>
    <string name="title_activity_ubah">Ubah</string>
    <string name="title_activity_peta_hasil_pencarian">PetaHasilPencarian</string>
    <string name="title_activity_login">Login</string>
</resources>
