<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_ubah"
    tools:context="com.dka.sigmaipb.Ubah">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/scroll_view_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="60dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_kb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/kode_barang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/kb_hint"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_nb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/nama_barang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nb_hint"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_mb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/merek_barang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mb_hint"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_tb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/tb_barang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tb_hint"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_hsb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/harga_satuan_barang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hsb_hint"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_sd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/sumber_dana"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sd_hint"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ruang"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Spinner
                    android:id="@+id/ruangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/judul_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/latitude_hint"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/longi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/longitude_hint"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/btnAmbilGambar"
                    android:textColor="@color/white"
                    android:onClick="loadImagefromGallery"/>

                <TextView
                    android:id="@+id/messageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preview"
                    android:gravity="center" />

                <ImageView
                    android:id="@+id/imgPreview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/saveData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/btnSimpan"
                    android:textColor="@color/white" />

            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</RelativeLayout>