<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:showIn="@layout/activity_tambah"
    tools:context="com.dka.sigmaipb.Tambah">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:id="@+id/scroll_view_frame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_kb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/kode_barang"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Kode Barang"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_nb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/nama_barang"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nama Barang"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_mb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/merek_barang"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Merek Barang"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_tb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/tb_barang"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tahun Barang"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_hsb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/harga_satuan_barang"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Harga Satuan Barang"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_sd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/sumber_dana"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Sumber Dana"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Ruangan"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/ruangan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/judul_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined" />

            <Button
                android:id="@+id/btnAmbilGambar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/btn"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btnAmbilGambar"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/btn"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btnGallery"
                android:textColor="@color/white"
                android:onClick="loadImagefromGallery"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preview"
                android:gravity="center" />

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/saveData"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/btn"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btnSimpan"
                android:textColor="@color/white" />

        </LinearLayout>
        </FrameLayout>
    </ScrollView>

</RelativeLayout>
